--- a/llncs.tex
+++ b/llncs.tex
@@ -8,6 +8,7 @@
 \usepackage{makeidx}  % allows for indexgeneration
 \usepackage{graphicx}
 \usepackage{url}
+\usepackage[utf8]{inputenc}
 \setcounter{tocdepth}{2}
 %
 \begin{document}
