Small fixes in neogeo section

--- a/llncs.tex
+++ b/llncs.tex
@@ -339,10 +339,10 @@ respuesta acertada y ahorra tiempo al usuario
 Se puede definir la Neogeografía como el uso de las herramientas informáticas
 de nueva generación propias de la sociedad de la información, en especial
 internet, para las finalidades propias de la Geografía como disciplina
-académica. Aunque los usos de la Neogeografía no suelen se formales ni
+académica. Aunque los usos de la Neogeografía no suelen ser formales ni
 analíticos, está ampliamente extendida para actividades personales o de
-interes especifico de un grupo de personas no expertas en el tema.
-\cite{turner2006}
+interes especifico de un grupo de personas no expertas en el tema 
+\cite{turner2006}.
 
 Es una expresión, en su más reciente sentido, que deriva del nuevo uso que
 se está dando a cartografía en Internet por parte de usuarios masivos. Esta
@@ -354,7 +354,7 @@ utilización  de aparatos de posicionamiento.
 El monitoreo del medioambiente con el uso de información geográfica es una de
 las ramas de trabajo que actualmente se encuentra en investigación
 \cite{connors2012}. Se trata del uso de información geoespacial con el fin de
-analizar condiciones climáticas y de la biodiversidad, con el fin de buscar
+analizar condiciones climáticas y de la biodiversidad, para así buscar
 soluciones a situaciones defavorables como desertificación, degradación de
 suelos, condiciones de poblaciones de animales, etc. Estos análisis son usados
 mayormente por ONGs y grupos ambientalistas que se dedican al cuidado del
