Add some content on GeoCLEF section

--- a/llncs.tex
+++ b/llncs.tex
@@ -18,17 +18,6 @@
 %
 \begin{document}
 \frontmatter
-<<<<<<< HEAD
-\chapter*{Prefacio}
-
-Este trabajo se ha realizado como parte del seminario investigativo de la
-asignatura Sistemas de Recuperacion de Información en la Universidad de
-la Habana, Cuba, en el curso 2020-2021. En el mismo se ha realizado una
-investigación sobre el estado del arte y uso de los Sistemas de Recuperación
-de Información Geográfica.
-
-=======
->>>>>>> aa981c9bc667b1983cc93254a3441ba8c8e1fbc1
 \pagestyle{headings}  % switches on printing of running heads
 
 \addtocmark[2]{Recuperación de Información Geográfica}
@@ -298,19 +287,21 @@ Estas categorías son las siguientes:
 
 \subsection{GeoCLEF}\label{sec:GeoCLEF}
 
-GeoCLEF (\emph{Geographical CCLEF}) es un marco de evaluación para la RIG que
+GeoCLEF (\emph{Geographical CLEF}) es un marco de evaluación para la RIG que
 pertenece al foro internacional \emph{Cross Language Evaluation Forum} (CLEF).
 Fue una colaboración esfuerzo de los grupos de investigación de la Universidad
-de California, Berkeley y la Universidad de Sheffield.
-\cite{gey2005,kornai2005}
+de California, Berkeley y la Universidad de Sheffield \cite{gey2005,kornai2005}.
 
-El objetivo de GeoCLEF es proporcionar el marco de trabajo necesario en el que
-evaluar estos sistemas RIG en búsquedas de información, teniendo en cuenta
-aspectos geo-referenciales y multiling\"ues. Es una tarea perteneciente al CLEF
-que se viene celebrando desde 2005. Se ejecutó, en un principio, como una
-prueba piloto para evaluar la recuperación de documentos multiling\"ues con
-énfasis en la búsqueda geográfica.
+El objetivo de GeoCLEF es proporcionar el marco de trabajo necesario para la
+evaluación de estos sistemas de RIG en búsquedas de información, teniendo en
+cuenta aspectos geo-referenciales y multilingües. Este evento se efectuó, en un
+principio, como una prueba piloto para evaluar la recuperación de documentos
+multilingües con énfasis en la búsqueda geográfica.
 
+La colección de prueba de GeoCLEF crece en 25 temas cada año. Esto generalmente
+se considera el tamaño mínimo de la colección de pruebas para producir
+resultados confiables. Con estos temas se realizan pruebas estadísticas y
+análisis adicionales para evaluar la validez de los resultados obtenidos.
 
 \section{Aplicaciones}\label{sec:appl}
 
