Fix minor issues and sort references

--- a/llncs.tex
+++ b/llncs.tex
@@ -115,6 +115,8 @@ que existen al usar un sistema de RIG; y en la Sección \ref{sec:chall} se
 describirán los retos que se presentan en el desarrollo de los sistemas de RIG
 en la actualidad.
 
+\newpage
+
 \section{Arquitecturas Propuestas}\label{sec:arch}
 
 Muchos son los sistemas de recuperación de información geográfica que se han
@@ -144,6 +146,8 @@ eficiente.
 	\label{fig:archbas}
 \end{figure}
 
+\newpage
+
 \subsection{SPIRIT}\label{sec:archspirit}
 
 En esta propuesta el trabajo de \cite{purves2007} describe el diseño,
@@ -171,6 +175,8 @@ espacial. La primera forma de indexar (textual) se realiza directamente del
 conjunto de documentos, la segunda forma (espacial) se puede apreciar en la
 Figura \ref{fig:archspirit} que se realiza utilizando los metadatos agregados a
 los documentos.
+
+\newpage
 
 \subsection{GeoUJA}\label{sec:archgeouja}
 
@@ -200,6 +206,8 @@ relvantes extraídos previamente, se realiza un validación de los mismos y se
 devuelve al usuario un conjunto de documentos que el sistema en general
 clasifica como relevantes.
 
+\newpage
+
 \subsection{GeoFinder}\label{sec:archgeofinder}
 
 Otra arquitectura interesante a presentar es la que propone GeoFinder
@@ -223,13 +231,15 @@ los documentos se evalúan teniendo en cuenta estas dos formas antes mencionadas
 (contenido y espacio). Finalmente considerando ambas métricas los
 resultados se combinan para extraer la mejor selección de documentos.
 
+\clearpage
+
 \section{Evaluación del Sistema}\label{sec:eval}
 
-LLos sistemas RIG, como cualquier otro sistema, se pueden someter a evaluación.
+Los sistemas RIG, como cualquier otro sistema, se pueden someter a evaluación.
 Es proceso es bastante parecido a los empleados en los SRI estándar, variando
 solo algunos pasos específicos que el propio sistema impone dada las
 características del mismo y del problema que pretende resolver (como por
-ejemplo la detección de entidades geográficas) \cite{Kornai2005}.
+ejemplo la detección de entidades geográficas) \cite{kornai2005}.
 
 Paralelamente al desarrollo de estos sistemas, surge un amplio campo de
 trabajo dedicado específicamente a la determinación de medidas que permitan
@@ -245,19 +255,19 @@ los mismos, siendo estos los pioneros de la evaluación de los sistemas, los
 cuales sirvieron de base para la creación de futuros métodos y análisis que
 se fueron transformando a través del tiempo y adaptándose a los nuevos
 sistemas que fueron apareciendo. Estos estudios son Cranfield,
-MEDLARS o SMART. \cite{bors2000}
+MEDLARS o SMART \cite{bors2000}.
 
-Aunque la propia naturaleza del los sistemas RIG difieran en ciertos aspectos
-de los sistemas SRI estándar, como fue antes mencionado, la mayoría de los
+Aunque la propia naturaleza del los sistemas de RIG difieran en ciertos aspectos
+de los SRI estándar, como fue antes mencionado, la mayoría de los
 métodos de evaluación empleados son también de uso estándar, o sea, la
-aplicación de estos en los sistemas SRI clásicos han sido extendidos a los
+aplicación de estos en los SRI clásicos han sido extendidos a los
 demás modelos, siendo cada vez más confiables y de amplio uso en la actualidad.
 
 \subsection{Método Cranfield}\label{sec:Cranfield}
 
 Es uno de los primeros métodos de evaluación, su uso se ha estandarizado 
 siendo hoy en día ampliamente usado en casi todos los sistemas como la base de
-modelos más complejos.\cite{hosseini2013}
+modelos más complejos \cite{hosseini2013}.
 
 Evalúa la eficacia del sistema de recuperación de información según la
 dimensión temática del documento y las consultas. Es un sistema de evaluación
@@ -293,6 +303,8 @@ La colección de prueba de GeoCLEF crece en 25 temas cada año. Esto generalment
 se considera el tamaño mínimo de la colección de pruebas para producir
 resultados confiables. Con estos temas se realizan pruebas estadísticas y
 análisis adicionales para evaluar la validez de los resultados obtenidos.
+
+\newpage
 
 \section{Aplicaciones}\label{sec:appl}
 
@@ -371,6 +383,8 @@ productos, específicamente la popularización del posicionamiento con GPS,
 siendo este uno de los aportes más significativos. El GPS se posiciona como un
 producto ampliamente usado, dejando claro la importancia de los servicios
 geoweb.
+
+\newpage
 
 \section{Beneficios y Limitantes}\label{sec:pros-and-cons}
 
@@ -489,6 +503,8 @@ A pesar de estas limitantes varios estudios se han realizado sobre la evaluació
 de la efectividad de los diversos algoritmos de clasificación de datos geográficos
  \cite{larson2004jul,larson2004sep}.
 
+\newpage
+
 \section{Desafíos Futuros}\label{sec:chall}
 
 Muchos son los desafíos que exiten en vías de mejorar la recuperación de datos
@@ -596,6 +612,8 @@ y comparaciones con otros métodos. Esto está ligado directamente con el hecho
 de que la evaluación de los sistemas de RIG todavía es un punto débil en este
 campo.
 
+\newpage
+
 \section{Conclusiones}\label{sec:conclusions}
 
 En el trabajo presentado se mostraron las características principales de los
@@ -620,108 +638,37 @@ en el tema de la recuperación de información geográfica. Es todavía un
 campo que se está explorando y que necesita de la participación de todos
 para su mejoramiento.
 
+\newpage
 
 %
 % ---- Bibliography ----
 %
 \begin{thebibliography}{}
 %
-\bibitem{chang2016}
-Chang, K. T. (2016). Geographic information system. International Encyclopedia
-of Geography: People, the Earth, Environment and Technology: People, the Earth,
-Environment and Technology, 1-9.
 
-\bibitem{teevan2011}
-Teevan, J., Karlson, A., Amini, S., Brush, A. B., \& Krumm, J. (2011, August).
-Understanding the importance of location, time, and people in mobile local
-search behavior. In Proceedings of the 13th international conference on human
-computer interaction with mobile devices and services (pp. 77-80).
+\bibitem{abdelmoty2005}
+Abdelmoty, A. I., Smart, P. D., Jones, C. B., Fu, G., \& Finch, D. (2005). A
+critical evaluation of ontology languages for geographic information retrieval
+on the Internet. Journal of Visual Languages \& Computing, 16(4), 331-358.
 
-\bibitem{leszczynski2012}
-Leszczynski, A. (2012). Situating the geoweb in political economy.
-Progress in human geography, 36(1), 72-89.
+\bibitem{artz2009}
+ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
+\url{https://gisandscience.com/2009/09/14/top-five-benefits-of-gis/}
 
-\bibitem{johnson2015}
-Johnson, P. A., Corbett, J. M., Gore, C., Robinson, P., Allen, P., \& Sieber,
-R. (2015). A web of expectations: Evolving relationships in community
-participatory Geoweb projects. ACME: An International Journal for Critical
-Geographies, 14(3), 827-848.
-
-\bibitem{lymberopoulos2011}
-Lymberopoulos, D., Zhao, P., Konig, C., Berberich, K., \& Liu, J.
-(2011, October). Location-aware click prediction in mobile local search. In
-Proceedings of the 20th ACM international conference on Information and
-knowledge management (pp. 413-422).
-
-\bibitem{turner2006}
-Turner, A. (2006). Introduction to neogeography. " O'Reilly Media, Inc.".
-
-\bibitem{connors2012}
-Connors, J. P., Lei, S., \& Kelly, M. (2012). Citizen science in the age of
-neogeography: Utilizing volunteered geographic information for environmental
-monitoring. Annals of the Association of American Geographers, 102(6),
-1267-1289.
-
-\bibitem{harris2012}
-Harris, T. M., \& Lafone, H. F. (2012). Toward an informal spatial data
-infrastructure: voluntary geographic information, neogeography, and the role
-of citizen sensors. SDI, Communities and Social Media, 8, 8-12.
-
-\bibitem{Kornai2005}
-Kornai, A. (2005, September). Evaluating geographic information retrieval. In
-Workshop of the Cross-Language Evaluation Forum for European Languages (pp.
-928-938). Springer, Berlin, Heidelberg.
+\bibitem{bordogna2012}
+Bordogna, G., Ghisalberti, G., \& Psaila, G. (2012). Geographic
+information retrieval: Modeling uncertainty of user's context. Fuzzy Sets and
+Systems, 196, 105-124.
 
 \bibitem{bors2000}
 Bors, N. ‘Information retrieval, experimental models and
 statistical analysis’. Journal of Documentation, vol 56, nº 1 January 2000. p.
 71-90
 
-\bibitem{artz2009}
-ARTZ, M. (2009, September 14). Top Five Benefits of GIS. GIS AND SCIENCE.
-\url{https://gisandscience.com/2009/09/14/top-five-benefits-of-gis/}
-
-\bibitem{scholten1991}
-Scholten, H. J., \& De Lepper, M. J. (1991). The benefits of the application of
-geographical information systems in public and environmental health. World
-health statistics quarterly. Rapport trimestriel de statistiques sanitaires
-mondiales, 44(3), 160-170.
-
-\bibitem{gey2007}
-Gey, F., Larson, R., Sanderson, M., Bischoff, K., Mandl, T., Womser-Hacker, C.,
-... \& Ferro, N. (2007). Challenges to evaluation of multilingual geographic
-information retrieval in GeoCLEF. In quot; In Workshop on Evaluation of
-Information Access (EVIA) May 15 (Tokyo Japan May 15 2007).
-
-\bibitem{jones2008}
-Jones, C. B., \& Purves, R. S. (2008). Geographical information retrieval.
-International Journal of Geographical Information Science, 22(3), 219-228.
-
-\bibitem{martins2005}
-Martins, B., Silva, M. J., \& Chaves, M. S. (2005, November). Challenges and
-resources for evaluating geographical IR. In Proceedings of the 2005 workshop
-on Geographic Information Retrieval (pp. 65-69).
-
-\bibitem{purves2011}
-Purves, R., \& Jones, C. (2011). Geographic information retrieval. SIGSPATIAL
-Special, 3(2), 2-4.
-
-\bibitem{purves2018}
-Purves, R. S., Clough, P., Jones, C. B., Hall, M. H., \& Murdock, V. (2018).
-Geographic information retrieval: Progress and challenges in spatial search of
-text. Foundations and Trends in Information Retrieval, 12(2-3), 164-318.
-
-\bibitem{purves2014}
-Purves, R. (2014). Geographic information retrieval: are we making progress. In
-NCGIA specialist meeting on spatial search (pp. 1-6).
-
-\bibitem{mandl2008}
-Mandl, T., Gey, F., Nunzio, G. D., Ferro, N., Sanderson, M., Santos, D., \&
-Womser-Hacker, C. (2008). An evaluation resource for Geographical Information
-Retrieval. In quot; In Proceedings of the 6 th International Conference on
-Language Resources and Evaluation (LREC 2008)(Marrakech 28-30 May 2008)
-European Language Resources Association (ELRA). European Language Resources
-Association (ELRA).
+\bibitem{brown1999}
+Brown, I. (1999). Developing a virtual reality user interface (VRUI) for
+geographic information retrieval on the Internet. Transactions in GIS, 3(3),
+207-220.
 
 \bibitem{buscaldi2009}
 Buscaldi, D. (2009, July). Toponym ambiguity in geographical information
@@ -732,73 +679,25 @@ research and development in information retrieval (pp. 847-847).
 Cai, G. (2011). Relevance ranking in geographical information retrieval.
 SIGSPATIAL Special, 3(2), 33-36.
 
-\bibitem{purves2004}
-Purves, R., \& Jones, C. (2004, December). Workshop on geographic information
-retrieval, SIGIR 2004. In ACM SIGIR Forum (Vol. 38, No. 2, pp. 53-56). New
-York, NY, USA: ACM.
+\bibitem{laMancha}
+Castilla-La Mancha. (2021, October 26). Wikipedia. Retrieved October 30, 2021,
+from \url{https://es.wikipedia.org/wiki/Castilla-La_Mancha#Toponimia}.
 
-\bibitem{kumar2011}
-Kumar, C. (2011, August). Relevance and ranking in geographic information
-retrieval. In Fourth BCS-IRSG Symposium on Future Directions in Information
-Access (FDIA 2011) 4 (pp. 2-7).
+\bibitem{chang2016}
+Chang, K. T. (2016). Geographic information system. International Encyclopedia
+of Geography: People, the Earth, Environment and Technology: People, the Earth,
+Environment and Technology, 1-9.
 
-\bibitem{janowicz2011}
-Janowicz, K., Raubal, M., \& Kuhn, W. (2011). The semantics of similarity in
-geographic information retrieval. Journal of Spatial Information Science, (2),
-29-57.
-
-\bibitem{larson2004sep}
-Larson, R. R., \& Frontiera, P. (2004, September). Spatial ranking methods for
-geographic information retrieval (GIR) in digital libraries. In International
-Conference on Theory and Practice of Digital Libraries (pp. 45-56). Springer,
-Berlin, Heidelberg.
-
-\bibitem{larson2004jul}
-Larson, R. R., \& Frontiera, P. (2004, July). Ranking and representation for
-geographic information retrieval. In Extended abstract in SIGIR 2004 Workshop
-on Geographic Information Retrieval.
-
-\bibitem{li1994}
-Li, R. (1994). Data structures and application issues in 3-D geographic
-information systems. Geomatica, 48(3), 209-224.
+\bibitem{connors2012}
+Connors, J. P., Lei, S., \& Kelly, M. (2012). Citizen science in the age of
+neogeography: Utilizing volunteered geographic information for environmental
+monitoring. Annals of the Association of American Geographers, 102(6),
+1267-1289.
 
 \bibitem{deAndrade2014}
 de Andrade, F. G., de Souza Baptista, C., \& Davis, C. A. (2014). Improving
 geographic information retrieval in spatial data infrastructures.
 GeoInformatica, 18(4), 793-818.
-
-\bibitem{abdelmoty2005}
-Abdelmoty, A. I., Smart, P. D., Jones, C. B., Fu, G., \& Finch, D. (2005). A
-critical evaluation of ontology languages for geographic information retrieval
-on the Internet. Journal of Visual Languages \& Computing, 16(4), 331-358.
-
-\bibitem{brown1999}
-Brown, I. (1999). Developing a virtual reality user interface (VRUI) for
-geographic information retrieval on the Internet. Transactions in GIS, 3(3),
-207-220.
-
-\bibitem{martins2007}
-Martins, B., Borbinha, J., Pedrosa, G., Gil, J., \& Freire, N. (2007, November).
-Geographically-aware information retrieval for collections of digitized
-historical maps. In Proceedings of the 4th ACM Workshop on Geographical
-information Retrieval (pp. 39-42).
-
-\bibitem{laMancha}
-Castilla-La Mancha. (2021, October 26). Wikipedia. Retrieved October 30, 2021,
-from \url{https://es.wikipedia.org/wiki/Castilla-La_Mancha#Toponimia}.
-
-\bibitem{purves2007} Purves, R. S., Clough, P., Jones, C. B., Arampatzis, A., Bucher, B.,
-Finch, D., ... \& Yang, B. (2007). The design and implementation of SPIRIT: a
-spatially aware search engine for information retrieval on the Internet.
-International journal of geographical information science, 21(7), 717-745.
-
-\bibitem{perea2007} Perea-Ortega, J. M., Cumbreras, M. Á. G., Vega, M. G., \&
-Montejo-Ráez, A. (2007). GEOUJA System. University of Jaén at GeoCLEF 2007. In
-CLEF (Working Notes).
-
-\bibitem{bordogna2012} Bordogna, G., Ghisalberti, G., \& Psaila, G. (2012). Geographic
-information retrieval: Modeling uncertainty of user's context. Fuzzy Sets and
-Systems, 196, 105-124.
 
 \bibitem{gey2005}
 Gey, F., Larson, R., Sanderson, M., Joho, H., Clough, P., \& Petras, V.
@@ -806,10 +705,16 @@ Gey, F., Larson, R., Sanderson, M., Joho, H., Clough, P., \& Petras, V.
 retrieval track overview. In Workshop of the cross-language evaluation forum
 for european languages (pp. 908-919). Springer, Berlin, Heidelberg.
 
-\bibitem{kornai2005}
-Kornai, A. (2005, September). Evaluating geographic information retrieval.
-In Workshop of the Cross-Language Evaluation Forum for European Languages
-(pp. 928-938). Springer, Berlin, Heidelberg.
+\bibitem{gey2007}
+Gey, F., Larson, R., Sanderson, M., Bischoff, K., Mandl, T., Womser-Hacker, C.,
+... \& Ferro, N. (2007). Challenges to evaluation of multilingual geographic
+information retrieval in GeoCLEF. In quot; In Workshop on Evaluation of
+Information Access (EVIA) May 15 (Tokyo Japan May 15 2007).
+
+\bibitem{harris2012}
+Harris, T. M., \& Lafone, H. F. (2012). Toward an informal spatial data
+infrastructure: voluntary geographic information, neogeography, and the role
+of citizen sensors. SDI, Communities and Social Media, 8, 8-12.
 
 \bibitem{hosseini2013}
 Hosseini, S. A., Lashgari, H., Choi, J. W., Nicot, J. P., Lu, J., \& Hovorka,
@@ -817,9 +722,121 @@ S. D. (2013). Static and dynamic reservoir modeling for geological CO2
 sequestration at Cranfield, Mississippi, USA. International Journal of
 Greenhouse Gas Control, 18, 449-462.
 
+\bibitem{janowicz2011}
+Janowicz, K., Raubal, M., \& Kuhn, W. (2011). The semantics of similarity in
+geographic information retrieval. Journal of Spatial Information Science, (2),
+29-57.
 
+\bibitem{johnson2015}
+Johnson, P. A., Corbett, J. M., Gore, C., Robinson, P., Allen, P., \& Sieber,
+R. (2015). A web of expectations: Evolving relationships in community
+participatory Geoweb projects. ACME: An International Journal for Critical
+Geographies, 14(3), 827-848.
+
+\bibitem{jones2008}
+Jones, C. B., \& Purves, R. S. (2008). Geographical information retrieval.
+International Journal of Geographical Information Science, 22(3), 219-228.
+
+\bibitem{kornai2005}
+Kornai, A. (2005, September). Evaluating geographic information retrieval. In
+Workshop of the Cross-Language Evaluation Forum for European Languages (pp.
+928-938). Springer, Berlin, Heidelberg.
+
+\bibitem{kumar2011}
+Kumar, C. (2011, August). Relevance and ranking in geographic information
+retrieval. In Fourth BCS-IRSG Symposium on Future Directions in Information
+Access (FDIA 2011) 4 (pp. 2-7).
+
+\bibitem{larson2004jul}
+Larson, R. R., \& Frontiera, P. (2004, July). Ranking and representation for
+geographic information retrieval. In Extended abstract in SIGIR 2004 Workshop
+on Geographic Information Retrieval.
+
+\bibitem{larson2004sep}
+Larson, R. R., \& Frontiera, P. (2004, September). Spatial ranking methods for
+geographic information retrieval (GIR) in digital libraries. In International
+Conference on Theory and Practice of Digital Libraries (pp. 45-56). Springer,
+Berlin, Heidelberg.
+
+\bibitem{leszczynski2012}
+Leszczynski, A. (2012). Situating the geoweb in political economy.
+Progress in human geography, 36(1), 72-89.
+
+\bibitem{li1994}
+Li, R. (1994). Data structures and application issues in 3-D geographic
+information systems. Geomatica, 48(3), 209-224.
+
+\bibitem{lymberopoulos2011}
+Lymberopoulos, D., Zhao, P., Konig, C., Berberich, K., \& Liu, J.
+(2011, October). Location-aware click prediction in mobile local search. In
+Proceedings of the 20th ACM international conference on Information and
+knowledge management (pp. 413-422).
+
+\bibitem{mandl2008}
+Mandl, T., Gey, F., Nunzio, G. D., Ferro, N., Sanderson, M., Santos, D., \&
+Womser-Hacker, C. (2008). An evaluation resource for Geographical Information
+Retrieval. In quot; In Proceedings of the 6 th International Conference on
+Language Resources and Evaluation (LREC 2008)(Marrakech 28-30 May 2008)
+European Language Resources Association (ELRA). European Language Resources
+Association (ELRA).
+
+\bibitem{martins2005}
+Martins, B., Silva, M. J., \& Chaves, M. S. (2005, November). Challenges and
+resources for evaluating geographical IR. In Proceedings of the 2005 workshop
+on Geographic Information Retrieval (pp. 65-69).
+
+\bibitem{martins2007}
+Martins, B., Borbinha, J., Pedrosa, G., Gil, J., \& Freire, N. (2007, November).
+Geographically-aware information retrieval for collections of digitized
+historical maps. In Proceedings of the 4th ACM Workshop on Geographical
+information Retrieval (pp. 39-42).
+
+\bibitem{perea2007}
+Perea-Ortega, J. M., Cumbreras, M. Á. G., Vega, M. G., \&
+Montejo-Ráez, A. (2007). GEOUJA System. University of Jaén at GeoCLEF 2007. In
+CLEF (Working Notes).
+
+\bibitem{purves2004}
+Purves, R., \& Jones, C. (2004, December). Workshop on geographic information
+retrieval, SIGIR 2004. In ACM SIGIR Forum (Vol. 38, No. 2, pp. 53-56). New
+York, NY, USA: ACM.
+
+\bibitem{purves2007}
+Purves, R. S., Clough, P., Jones, C. B., Arampatzis, A., Bucher, B.,
+Finch, D., ... \& Yang, B. (2007). The design and implementation of SPIRIT: a
+spatially aware search engine for information retrieval on the Internet.
+International journal of geographical information science, 21(7), 717-745.
+
+\bibitem{purves2011}
+Purves, R., \& Jones, C. (2011). Geographic information retrieval. SIGSPATIAL
+Special, 3(2), 2-4.
+
+\bibitem{purves2014}
+Purves, R. (2014). Geographic information retrieval: are we making progress. In
+NCGIA specialist meeting on spatial search (pp. 1-6).
+
+\bibitem{purves2018}
+Purves, R. S., Clough, P., Jones, C. B., Hall, M. H., \& Murdock, V. (2018).
+Geographic information retrieval: Progress and challenges in spatial search of
+text. Foundations and Trends in Information Retrieval, 12(2-3), 164-318.
+
+\bibitem{scholten1991}
+Scholten, H. J., \& De Lepper, M. J. (1991). The benefits of the application of
+geographical information systems in public and environmental health. World
+health statistics quarterly. Rapport trimestriel de statistiques sanitaires
+mondiales, 44(3), 160-170.
+
+\bibitem{teevan2011}
+Teevan, J., Karlson, A., Amini, S., Brush, A. B., \& Krumm, J. (2011, August).
+Understanding the importance of location, time, and people in mobile local
+search behavior. In Proceedings of the 13th international conference on human
+computer interaction with mobile devices and services (pp. 77-80).
+
+\bibitem{turner2006}
+Turner, A. (2006). Introduction to neogeography. " O'Reilly Media, Inc.".
 
 \end{thebibliography}
+
 \clearpage
 \addtocmark[2]{Subject Index} % additional numbered TOC entry
 \markboth{Subject Index}{Subject Index}
