Change subject index section name

--- a/llncs.tex
+++ b/llncs.tex
@@ -838,8 +838,8 @@ Turner, A. (2006). Introduction to neogeography. " O'Reilly Media, Inc.".
 \end{thebibliography}
 
 \clearpage
-\addtocmark[2]{Subject Index} % additional numbered TOC entry
-\markboth{Subject Index}{Subject Index}
-\renewcommand{\indexname}{Subject Index}
+\addtocmark[2]{Índice de temas} % additional numbered TOC entry
+\markboth{Índice de temas}{Índice de temas}
+\renewcommand{\indexname}{Índice de temas}
 \input{subjidx.tex}
 \end{document}
