Fix evaluation section

--- a/llncs.tex
+++ b/llncs.tex
@@ -225,35 +225,20 @@ resultados se combinan para extraer la mejor selección de documentos.
 
 \section{Evaluación del Sistema}\label{sec:eval}
 
-Los sistemas RIG, como cualquier otro sistema, se pueden someter a evaluación.
-De esta forma los usuarios pueden valorar su efectividad y adquierir más confianza
-en los mismos. Por ello, y paralelamente al desarrollo de su tecnología, surge un
-amplio campo de trabajo dedicado específicamente a la determinación de medidas
-que permitan valorar su efectividad. Un repaso exhaustivo de la bibliografía
-especializada permite identificar varios grupos de evaluaciones: las basadas en
-la relevancia de los documentos, las basadas en los usuarios y un tercer grupo
+LLos sistemas RIG, como cualquier otro sistema, se pueden someter a evaluación.
+Es proceso es bastante parecido a los empleados en los SRI estándar, variando
+solo algunos pasos específicos que el propio sistema impone dada las
+características del mismo y del problema que pretende resolver (como por
+ejemplo la detección de entidades geográficas) \cite{Kornai2005}.
+
+Paralelamente al desarrollo de estos sistemas, surge un amplio campo de
+trabajo dedicado específicamente a la determinación de medidas que permitan
+valorar su efectividad. Un repaso exhaustivo de la bibliografía especializada
+permite identificar varios grupos de evaluaciones: las basadas en la
+relevancia de los documentos, las basadas en los usuarios y un tercer grupo
 de medidas alternativas a la realización de los juicios de relevancia, que
 pretende evitar la afectación de estos juicios por las dosis de subjetividad que
 poseen de forma inherente.
-
-El proceso de evaluación de los sistemas de RIG es bastante parecido a los
-empleados en los SRI estándar, variando solo algunos pasos específicos que el
-propio sistema impone dada las caracteristicas del mismo y del problema que
-pretende resolver (como por ejemplo la detección de entidades geográficas)
-\cite{Kornai2005}.
-
-En este punto surge una nueva cuestión: ?`Cuándo la información es
-relevante?, si bien podría parecer trivial a primera vista, puede marcar en
-gran medida el resultado de un proceso de evaluación. Esta cuestión no es otra
-que responder con certeza a la pregunta .
-
-El término relevancia significa ``calidad o condición de relevante,
-importancia, significación", y el término relevante lo define como
-``importante o significativo". Entendiéndose, por extensión de las definiciones
-anteriores, que una información recuperada se puede considerar relevante
-cuando el contenido de la misma posee alguna significación o importancia
-con motivo de la pregunta realizada por el usuario, es decir, con su
-necesidad de información.
 
 Los primeros estudios de evaluación de los SRI datan casi del surgimiento de
 los mismos, siendo estos los pioneros de la evaluación de los sistemas, los
@@ -261,6 +246,12 @@ cuales sirvieron de base para la creación de futuros métodos y análisis que
 se fueron transformando a través del tiempo y adaptándose a los nuevos
 sistemas que fueron apareciendo. Estos estudios son Cranfield,
 MEDLARS o SMART. \cite{bors2000}
+
+Aunque la propia naturaleza del los sistemas RIG difieran en ciertos aspectos
+de los sistemas SRI estándar, como fue antes mencionado, la mayoría de los
+métodos de evaluación empleados son también de uso estándar, o sea, la
+aplicación de estos en los sistemas SRI clásicos han sido extendidos a los
+demás modelos, siendo cada vez más confiables y de amplio uso en la actualidad.
 
 \subsection{Método Cranfield}\label{sec:Cranfield}
 
